--- a/code source/2-earth_sphere.html
+++ b/code source/2-earth_sphere.html
@@ -1,28 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/2.1.7/aframe/build/aframe-ar.js"></script>
-    <title>Earth-sphere</title>
-</head>
-<body style="margin: 0; overflow: hidden;">
-    <a-scene embedded arjs>
-
-        <a-assets>
-            <img id="earth-sphere" src="earth-sphere.jpg" />
-        </a-assets>
-
-        <a-marker type="pattern" url="pattern-hiro.patt">
-            <a-sphere position="0 0.5 0" 
-                   material="src: #earth-sphere; transparent: true; opacity: 0.95;"
-                   animation__rotate = "property: rotation; dur: 8000; easing: linear; dir: normal; from:0 0 0; to: 0 360 0; loop: true;">
-            </a-sphere>
-        </a-marker>
-
-        <a-entity camera></a-entity>
+<html>
+  <head>
+    <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
+  </head>
+  <body>
+    <a-scene>
+      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
+      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
+      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
+      <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
+      <a-sky color="#ECECEC"></a-sky>
     </a-scene>
-    
-</body>
+  </body>
 </html>
